--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <div class="col-lg-4 header-left">
             <h1>
                 <a class="navbar-brand text-center" href="index.html">
-                    <span>A</span>gro
-                    <span>F</span>ield
+                    <span>F</span>gro
+                    <span>P</span>ield
                 </a>
             </h1>
             <div class="banner-text-w3ls">
-                <h3>agriculture portal</h3>
+                <h3>Farmers portal</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget faucibus est.Suspendisse auctor urna blandit ultricies maximus. Sed accumsan auctor lacus ac mattis. Mauris at nibh purus. Nullam vulputate, urna id facilisis eleifend, nisl turpis
                     suscipit augue, eget tincidunt velit nunc ut lectus.Morbi rutrum ut risus sed hendrerit. Mauris at nibh purus. Nullam vulputate</p>
@@ -119,7 +119,7 @@
                             <div class="d-flex">
                                 <div class="slider-info">
                                     <h3>built for today's world</h3>
-                                    <p>Onec consequat sapien ut leo cursus rhoncus.
+                                    <p>lets do something for the cause.
                                     </p>
                                 </div>
                                 <div class="logo-sign d-flex">
@@ -280,7 +280,7 @@
     <section class="agileits-services my-5 py-md-5 py-3" id="team">
         <div class="container py-lg-5">
             <div class="text-center wthree-title pb-sm-5 pb-3">
-                <h4 class="w3l-sub pb-5">developers</h4>
+                <h4 class="w3l-sub pb-5">Developers</h4>
                 <p class="mx-auto">Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varm hic tenetur a sapiente delectus reiciendis maiores aliius orci. Nulla accumsan ac elit in congue.</p>
             </div>
             <div class="row py-sm-5 pt-5">
