--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="col-lg-4 header-left">
             <h1>
                 <a class="navbar-brand text-center" href="index.html">
-                    <span>F</span>gro
-                    <span>P</span>ield
+                    <span>F</span>armers
+                    <span>P</span>ortal
                 </a>
             </h1>
             <div class="banner-text-w3ls">
@@ -732,8 +732,8 @@
             <div class="px-4 pt-5 footer-top">
                 <h2>
                     <a href="index.html">
-                        <span>A</span>gro
-                        <span>F</span>ield
+                        <span>F</span>armers
+                        <span>P</span>ortal
                     </a>
                 </h2>
             </div>
