--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-lg-auto text-center">
                             <li class="nav-item active mr-3">
-                                <a class="nav-link" href="index.html">Home
+                                <a class="nav-link" href="login.html">Home
                                         <span class="sr-only">(current)</span>
                                     </a>
                             </li>
