--- a/index.html
+++ b/index.html
@@ -107,6 +107,16 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">contact</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="login.html">
+                                    <button type="button" class="btn btn-info text-light rounded-left" id="nav_btn">Log In</button>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="login.html">
+                                    <button type="button" class="btn btn-danger text-light rounded-right" id="nav_btn">Sign Up</button>
+                                </a>
+                            </li>
                         </ul>
                     </div>
 
