modified index page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 </head>
 
 <body>
-
+    <marquee direction = "left"><a href="products.html">Explore New products.</a><button>New</button>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        <a href="products.html">Get large discounts.</a><button>New</button></marquee>
     <!-- ----------------------------  Navigation ---------------------------------------------- -->
 
     <nav class="nav">
@@ -54,6 +55,10 @@
                     <li class="nav-link">
                         <a href="#">Contact Us</a>
                     </li>
+                    <li class="nav-link">
+                        <a href="login.html">Login/SignUp</a>
+                    </li>
+                    
                 </ul>
             </div>
             <div class="social text-gray">
@@ -79,7 +84,9 @@
                 <h1>A farm is more than land and crops.</h1>
                 <h3>Agriculture not only gives riches to a nation, but the only riches she can call her own.Agriculture
                     not only gives riches to a nation, but the only riches she can call her own</h3>
-                <button class="btn">Explore</button>
+                <a href="login.html">
+                    <button class="btn">SignUp today</button>
+                </a>
             </div>
         </section>
 
